# DDRobot_Smoothing_Trajectory_Controller

./: LICENSE  README.md  controller.py  controller_node.py  error.py  fake_odom.py  package.xml  pure_pursuit.py  setup.py  trajectory_publisher.py
prototype/: controller.py  requirements.txt  run_demo.py  sim.py  smoothing.py  trajectory.py
prototype/tests/: basic_test.py
